--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -239,14 +239,14 @@
         // width: 45%;
         // gap: 3rem;
 
-        span {
-          // display: flex;
-          // flex-direction: column;
-          // justify-content: center;
-          // align-items: center;
-          // height: 100%;
-          // gap: 3rem;
-        }
+        // span {
+        //   // display: flex;
+        //   // flex-direction: column;
+        //   // justify-content: center;
+        //   // align-items: center;
+        //   // height: 100%;
+        //   // gap: 3rem;
+        // }
 
         .badge {
           // height: 5rem;
@@ -315,7 +315,7 @@
 
           i {
             font-size: 2.3rem;
-            color: $secondary;
+            // color: $secondary;
           }
         }
 
